--- a/package.json
+++ b/package.json
@@ -12,34 +12,33 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "7.1.2",
-    "@babel/node": "7.0.0",
-    "@babel/plugin-proposal-class-properties": "7.1.0",
-    "@babel/preset-env": "7.1.0",
+    "@babel/core": "^7.4.3",
+    "@babel/node": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.4.0",
+    "@babel/preset-env": "^7.4.3",
     "@babel/preset-react": "7.0.0",
-    "babel-loader": "8.0.4",
-    "css-loader": "1.0.0",
-    "eslint": "5.6.1",
-    "eslint-loader": "2.1.1",
-    "file-loader": "2.0.0",
+    "babel-loader": "^8.0.5",
+    "css-loader": "^2.1.1",
+    "eslint": "^5.16.0",
+    "eslint-loader": "^2.1.2",
+    "file-loader": "^3.0.1",
     "html-webpack-plugin": "3.2.0",
-    "node-sass": "4.9.3",
+    "node-sass": "^4.11.0",
     "path": "0.12.7",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.1",
-    "webpack": "4.19.0",
-    "webpack-cli": "3.1.0",
-    "webpack-dev-server": "^3.2.1"
+    "webpack": "^4.30.0",
+    "webpack-cli": "^3.3.0",
+    "webpack-dev-server": "^3.3.1"
   },
   "dependencies": {
     "axios": "0.18.0",
-    "missing": "0.0.1",
-    "react": "16.5.2",
-    "react-dom": "16.5.2",
-    "react-redux": "5.0.7",
-    "react-router": "4.3.1",
-    "react-router-dom": "4.3.1",
-    "redux": "4.0.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-redux": "^7.0.2",
+    "react-router": "^5.0.0",
+    "react-router-dom": "^5.0.0",
+    "redux": "^4.0.1",
     "redux-thunk": "2.3.0"
   }
 }
